made edit for Geo192

--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
           <h2 class="subheading gsap-reveal-hero mb-4">
             Welcome to my personal portfolio website!
           </h2>
-          <p class="gsap-reveal-hero"><a href="files/CV_Jiwonbaik.pdf" target="_blank" class="btn btn-outline-black">Download CV HERE</a></p>    
         </div>
       </div>
       
@@ -105,8 +104,8 @@
     <div class="container">
       <div class="row justify-content-center mb-3">
         <div class="col-lg-7 mx-auto text-center author-wrap">
-          <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle mb-3">
-          <h3 class="text-black h5 font-weight-bold mb-2 gsap-reveal-hero">Your Name</h3>
+          <img src="images/headshot.jpeg" alt="Image" class="img-fluid rounded-circle mb-3 custom-size">
+          <h3 class="text-black h5 font-weight-bold mb-2 gsap-reveal-hero">Yicong Zeng</h3>
           <p class="gsap-reveal-hero">UCSB Student</p>
         </div>
       </div>
@@ -601,11 +600,11 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="namecard">
-              <h3><strong>Your Name</strong></h3>
+              <h3><strong>Yicong Zeng</strong></h3>
               <p><strong>Affiliation:</strong> Your Affiliation</p>
-              <p><strong>Email:</strong> your.email@example.com</p>
-              <p><strong>Phone:</strong> (123) 456-7890</p>
-              <p><strong>Address:</strong> Your Address</p>
+              <p><strong>Email:</strong> yicong@ucsb.edu</p>
+              <p><strong>Phone:</strong> (820) 758 8137</p>
+              <p><strong>Address:</strong> University of California, Santa Barbara</p>
             </div>
           </div>
           <div class="col-lg-6 mb-5">
